--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1 id="timer"> 00:00 </h1>
         <h2> High Score: 0</h2>
-        <p> Score: 0</p>
+        <p id="score"> Score: 0</p>
         <div id="Spawn_area">
             <div class="spawn_row"> 
                 <div class="spawn_hole"> <button class="mole_obj active"> Mole </button> </div>
