Add high score tracking and restart game state functionality

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1 id="timer"> 00:00 </h1>
+        <p id="high_score"> High Score: 0 </p>
         <p id="score"> Score: 0</p>
 
         <div id="Spawn_area">
@@ -27,7 +28,7 @@
         </div>
 
         <button id="start" onclick="playGame()"> Play Game </button> 
-        <button id="Restart" onclick="refresh()"> Restart </button>
+        <button id="restart" onclick="refresh()"> Restart </button>
     </body>
     <script src="script.js"></script>
 </html>
